--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
 		android:icon="@mipmap/ic_launcher_round"
 		android:label="@string/app_name"
 		android:logo="@mipmap/ic_launcher_round"
+		android:supportsRtl="true"
 		android:theme="@style/BriarTheme">
 
 		<receiver
