--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -153,8 +153,9 @@ task verifyTranslations {
 		lc.children().each { value -> translations.add(value.text()) }
 
 		def folders = ["default", "en-US"]
+		def exceptions = ["values-night", "values-v21", "values-ldrtl"]
 		project.file("src/main/res").eachDir { dir ->
-			if (dir.name.startsWith("values-") && !dir.name.endsWith("night") && !dir.name.endsWith("v21")) {
+			if (dir.name.startsWith("values-") && !exceptions.contains(dir.name)) {
 				folders.add(dir.name.substring(7).replace("-r", "-"))
 			}
 		}
