--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
 	package="org.briarproject.briar"
-	xmlns:android="http://schemas.android.com/apk/res/android">
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<uses-feature android:name="android.hardware.bluetooth" android:required="false"/>
 	<uses-feature android:name="android.hardware.camera" android:required="false"/>
@@ -29,7 +30,8 @@
 		android:label="@string/app_name"
 		android:logo="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:theme="@style/BriarTheme">
+		android:theme="@style/BriarTheme"
+		tools:ignore="GoogleAppIndexingWarning">
 
 		<receiver
 			android:name="org.briarproject.briar.android.login.SignInReminderReceiver"
@@ -421,6 +423,20 @@
 			android:label="@string/lock_unlock"
 			android:launchMode="singleTask"
 			android:theme="@style/BriarTheme.NoActionBar"/>
+
+		<!-- Prototype -->
+		<activity
+			android:name=".android.contact.ContactLinkOutputActivity"
+			android:theme="@style/BriarTheme"/>
+
+		<activity
+			android:name=".android.contact.ContactLinkInputActivity"
+			android:theme="@style/BriarTheme"
+			android:windowSoftInputMode="stateHidden|adjustResize">
+			<intent-filter>
+				<data android:scheme="briar"/>
+			</intent-filter>
+		</activity>
 
 	</application>
 </manifest>
