--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -117,6 +117,9 @@ dependencies {
 	implementation 'uk.co.samuelwall:material-tap-target-prompt:2.12.4'
 	implementation 'com.vanniktech:emoji-google:0.5.1'
 
+	// prototype
+	implementation "com.leinardi.android:speed-dial:2.0.0"
+
 	annotationProcessor 'com.google.dagger:dagger-compiler:2.0.2'
 
 	compileOnly 'javax.annotation:jsr250-api:1.0'
