Accept text shared by other apps.

--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -427,6 +427,11 @@
 			<intent-filter>
 				<data android:scheme="briar"/>
 			</intent-filter>
+			<intent-filter>
+				<action android:name="android.intent.action.SEND"/>
+				<category android:name="android.intent.category.DEFAULT"/>
+				<data android:mimeType="text/plain"/>
+			</intent-filter>
 		</activity>
 
 	</application>
