--- a/briar-android/src/main/AndroidManifest.xml
+++ b/briar-android/src/main/AndroidManifest.xml
@@ -434,5 +434,10 @@
 			</intent-filter>
 		</activity>
 
+		<activity
+			android:name=".android.contact.PendingRequestsActivity"
+			android:label="@string/pending_contact_requests"
+			android:theme="@style/BriarTheme"/>
+
 	</application>
 </manifest>
