--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -2,6 +2,70 @@ apply plugin: 'com.android.application'
 apply plugin: 'witness'
 apply from: 'witness.gradle'
 
+// prototype
+repositories {
+	maven { url 'https://jitpack.io' }
+}
+
+dependencies {
+	implementation project(path: ':briar-core', configuration: 'default')
+	implementation project(path: ':bramble-core', configuration: 'default')
+	implementation project(':bramble-android')
+
+	def supportVersion = '28.0.0'
+	implementation "com.android.support:support-v4:$supportVersion"
+	implementation("com.android.support:appcompat-v7:$supportVersion") {
+		exclude module: 'support-v4'
+	}
+	implementation("com.android.support:preference-v14:$supportVersion") {
+		exclude module: 'support-v4'
+	}
+	implementation("com.android.support:design:$supportVersion") {
+		exclude module: 'support-v4'
+		exclude module: 'recyclerview-v7'
+	}
+	implementation "com.android.support:cardview-v7:$supportVersion"
+	implementation "com.android.support:support-annotations:$supportVersion"
+	implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+	implementation('ch.acra:acra:4.9.1') {
+		exclude module: 'support-v4'
+		exclude module: 'support-annotations'
+	}
+	implementation 'info.guardianproject.panic:panic:0.5'
+	implementation 'info.guardianproject.trustedintents:trustedintents:0.2'
+	implementation 'de.hdodenhof:circleimageview:2.2.0'
+	implementation 'com.google.zxing:core:3.3.0'
+	implementation 'uk.co.samuelwall:material-tap-target-prompt:2.8.0'
+	implementation 'com.vanniktech:emoji-google:0.5.1'
+
+	annotationProcessor 'com.google.dagger:dagger-compiler:2.0.2'
+
+	compileOnly 'javax.annotation:jsr250-api:1.0'
+
+	testImplementation project(path: ':bramble-api', configuration: 'testOutput')
+	testImplementation project(path: ':bramble-core', configuration: 'testOutput')
+	testImplementation 'org.robolectric:robolectric:3.8'
+	testImplementation 'org.robolectric:shadows-support-v4:3.3.2'
+	testImplementation 'org.mockito:mockito-core:2.13.0'
+	testImplementation 'junit:junit:4.12'
+	testImplementation "org.jmock:jmock:2.8.2"
+	testImplementation "org.jmock:jmock-junit4:2.8.2"
+	testImplementation "org.jmock:jmock-legacy:2.8.2"
+	testImplementation "org.hamcrest:hamcrest-library:1.3"
+	testImplementation "org.hamcrest:hamcrest-core:1.3"
+
+	def espressoVersion = '3.0.2'
+	androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
+	androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
+	androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espressoVersion"
+	androidTestImplementation "tools.fastlane:screengrab:1.1.0"
+	androidTestImplementation "com.android.support.test.uiautomator:uiautomator-v18:2.1.3"
+	androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:2.0.2"
+	androidTestCompileOnly 'javax.annotation:jsr250-api:1.0'
+	androidTestImplementation 'junit:junit:4.12'
+}
+
 def getStdout = { command, defaultValue ->
 	def stdout = new ByteArrayOutputStream()
 	try {
@@ -118,7 +182,7 @@ dependencies {
 	implementation 'com.vanniktech:emoji-google:0.5.1'
 
 	// prototype
-	implementation "com.leinardi.android:speed-dial:2.0.0"
+	implementation "com.github.kobakei:MaterialFabSpeedDial:1.2.0"
 
 	annotationProcessor 'com.google.dagger:dagger-compiler:2.0.2'
 
