Add obfs4 proxy and switch to obfs4 bridges

--- a/bramble-android/build.gradle
+++ b/bramble-android/build.gradle
@@ -29,6 +29,7 @@ configurations {
 dependencies {
 	implementation project(path: ':bramble-core', configuration: 'default')
 	tor 'org.briarproject:tor-android:0.3.4.8@zip'
+	tor 'org.briarproject:obfs4proxy-android:0.0.7@zip'
 
 	annotationProcessor 'com.google.dagger:dagger-compiler:2.0.2'
 
