Change package ID and name for prototype

--- a/briar-android/build.gradle
+++ b/briar-android/build.gradle
@@ -99,7 +99,7 @@ android {
 
 	buildTypes {
 		debug {
-			applicationIdSuffix ".debug"
+			applicationIdSuffix ".debug.qr" // prototype
 			shrinkResources false
 			minifyEnabled true
 			crunchPngs false
