--- a/bramble-core/build.gradle
+++ b/bramble-core/build.gradle
@@ -3,7 +3,6 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 apply plugin: 'ru.vyarus.animalsniffer'
-apply plugin: 'net.ltgt.apt'
 apply plugin: 'idea'
 apply plugin: 'witness'
 apply from: 'witness.gradle'
@@ -17,7 +16,7 @@ dependencies {
 	implementation 'org.whispersystems:curve25519-java:0.5.0'
 	implementation 'org.briarproject:jtorctl:0.3'
 
-	apt 'com.google.dagger:dagger-compiler:2.19'
+	annotationProcessor 'com.google.dagger:dagger-compiler:2.19'
 
 	testImplementation project(path: ':bramble-api', configuration: 'testOutput')
 	testImplementation 'org.hsqldb:hsqldb:2.3.5' // The last version that supports Java 1.6
@@ -28,9 +27,24 @@ dependencies {
 	testImplementation "org.hamcrest:hamcrest-library:1.3"
 	testImplementation "org.hamcrest:hamcrest-core:1.3"
 
-	testApt 'com.google.dagger:dagger-compiler:2.19'
+	testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.19'
 
 	signature 'org.codehaus.mojo.signature:java16:1.1@signature'
+}
+
+sourceSets.configureEach { sourceSet ->
+	tasks.named(sourceSet.compileJavaTaskName).configure {
+		options.annotationProcessorGeneratedSourcesDirectory = file("$buildDir/generated/source/apt/${sourceSet.name}")
+	}
+}
+
+idea {
+	module {
+		sourceDirs += compileJava.options.annotationProcessorGeneratedSourcesDirectory
+		generatedSourceDirs += compileJava.options.annotationProcessorGeneratedSourcesDirectory
+		testSourceDirs += compileTestJava.options.annotationProcessorGeneratedSourcesDirectory
+		generatedSourceDirs += compileTestJava.options.annotationProcessorGeneratedSourcesDirectory
+	}
 }
 
 // needed to make test output available to bramble-java
