--- a/briar-core/build.gradle
+++ b/briar-core/build.gradle
@@ -3,7 +3,6 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 apply plugin: 'ru.vyarus.animalsniffer'
-apply plugin: 'net.ltgt.apt'
 apply plugin: 'idea'
 apply plugin: 'witness'
 apply from: 'witness.gradle'
@@ -15,7 +14,7 @@ dependencies {
 	implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 	implementation 'org.jsoup:jsoup:1.11.3'
 
-	apt 'com.google.dagger:dagger-compiler:2.19'
+	annotationProcessor 'com.google.dagger:dagger-compiler:2.19'
 
 	testImplementation project(path: ':bramble-core', configuration: 'default')
 	testImplementation project(path: ':bramble-core', configuration: 'testOutput')
@@ -28,7 +27,22 @@ dependencies {
 	testImplementation "org.hamcrest:hamcrest-library:1.3"
 	testImplementation "org.hamcrest:hamcrest-core:1.3"
 
-	testApt 'com.google.dagger:dagger-compiler:2.19'
+	testAnnotationProcessor 'com.google.dagger:dagger-compiler:2.19'
 
 	signature 'org.codehaus.mojo.signature:java16:1.1@signature'
+}
+
+sourceSets.configureEach { sourceSet ->
+	tasks.named(sourceSet.compileJavaTaskName).configure {
+		options.annotationProcessorGeneratedSourcesDirectory = file("$buildDir/generated/source/apt/${sourceSet.name}")
+	}
+}
+
+idea {
+	module {
+		sourceDirs += compileJava.options.annotationProcessorGeneratedSourcesDirectory
+		generatedSourceDirs += compileJava.options.annotationProcessorGeneratedSourcesDirectory
+		testSourceDirs += compileTestJava.options.annotationProcessorGeneratedSourcesDirectory
+		generatedSourceDirs += compileTestJava.options.annotationProcessorGeneratedSourcesDirectory
+	}
 }
